--- a/design_document/主体结构.md
+++ b/design_document/主体结构.md
@@ -1,3 +1,9 @@
 
-### 主体结构
-- 一个Activity为主题，其余通过Fragment的互相切换来实现
+# 主体结构
+- 以一个Activity为主题，其余通过Fragment的互相切换来实现
+
+### 主要实现点
+
+- 四个按钮的切换显示
+
+- Handler的各种传值进行数据刷新
