--- a/design_document/主体结构.md
+++ b/design_document/主体结构.md
@@ -6,6 +6,49 @@
 
 - 四个按钮的切换显示
 
+  在这里，这四个用来切换页面的按钮主要是使用了Button，而没有用RadioButton，因为使用RadioButton的时候不能重复点击
+  - 布局代码如下：
+  
+  <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:layout_gravity="center">
+
+            <Button
+                android:id="@+id/rb_home"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                style="@style/Main_Button"
+                android:text="@string/home"
+                />
+            <Button
+                android:id="@+id/rb_software"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                style="@style/Main_Button"
+                android:layout_marginLeft="20dp"
+                android:text="@string/software"
+                />
+            <Button
+                android:id="@+id/rb_game"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                style="@style/Main_Button"
+                android:layout_marginLeft="20dp"
+                android:text="@string/game"
+                />
+            <Button
+                android:id="@+id/rb_manager"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                style="@style/Main_Button"
+                android:layout_marginLeft="20dp"
+                android:text="@string/manager"
+                />
+
+        </LinearLayout>
 - Handler的各种传值进行数据刷新
 
 - 下载数据的保存结构
