--- a/design_document/主体结构.md
+++ b/design_document/主体结构.md
@@ -47,8 +47,31 @@
                 android:layout_marginLeft="20dp"
                 android:text="@string/manager"
                 />
-
         </LinearLayout>
+        
+  - 每个小Button前面的图片设置是通过加载drawable对象来实现
+  
+        int[] drawables = new int[] {
+                R.drawable.select_home_drawable,
+                R.drawable.select_software_drawable,
+                R.drawable.select_game_drawable,
+                R.drawable.select_manager_drawable
+        };
+        int[] rids = new int[] {
+                R.id.rb_home,
+                R.id.rb_software,
+                R.id.rb_game,
+                R.id.rb_manager
+        };
+        Resources res = getResources();
+        for (int i = 0; i < rids.length; i++) {
+            Button rb = (Button) findViewById(rids[i]);
+            rb.setOnClickListener(this);
+            Drawable drawable = res.getDrawable(drawables[i]);
+            drawable.setBounds(0, 0, Constants.DRAWABLE_SIZE, Constants.DRAWABLE_SIZE);
+            rb.setCompoundDrawablePadding(Constants.DRAWABLE_PADDING);
+            rb.setCompoundDrawables(drawable, null, null, null);
+        }
 - Handler的各种传值进行数据刷新
 
 - 下载数据的保存结构
