--- a/design_document/主体结构.md
+++ b/design_document/主体结构.md
@@ -72,6 +72,40 @@
             rb.setCompoundDrawablePadding(Constants.DRAWABLE_PADDING);
             rb.setCompoundDrawables(drawable, null, null, null);
         }
+        
+  - 每个Button的点击的颜色切换以及页面跳转。previousButton是记录的上一次的按钮，currentButton是当前的按钮，以此来进行选中背景的选择。点击点击点击每个条目的时候通过Handler来发消息序列，进而进行界面刷新。
+  
+        class HomeItemClick implements View.OnClickListener {
+            @Override
+            public void onClick(View view) {
+                currentButton = (Button) view;
+                if (currentButton != previousButton) {
+                    currentButton.setTextColor(getResources().getColor(R.color.blue));
+                    if (previousButton != null) {
+                        previousButton.setTextColor(getResources().getColor(R.color.gray));
+                    }
+                    previousButton = currentButton;
+                    switch (view.getId()) {
+                        case R.id.rb_home:
+                            sendMessage(Constants.HOME_FRAGMENT, null);
+                            break;
+                        case R.id.rb_software:
+                            sendMessage(Constants.SOFTWARE_FRAGMENT, null);
+                            break;
+                        case R.id.rb_game:
+                            sendMessage(Constants.GAME_FRAGMENT, null);
+                            break;
+                        case R.id.rb_manager:
+                            sendMessage(Constants.MANAGER_FRAGMENT, null);
+                            break;
+                    }
+                }
+            }
+        }
+        
+        public static void sendMessage(int what, String obj) {
+            mHandler.sendMessage(mHandler.obtainMessage(what, obj));
+        }
 - Handler的各种传值进行数据刷新
 
 - 下载数据的保存结构
