--- a/design_document/主体结构.md
+++ b/design_document/主体结构.md
@@ -108,4 +108,165 @@
         }
 - Handler的各种传值进行数据刷新
 
+  - 这是整个应用页面跳转的核心，下面来看一下它的具体逻辑
+        
+        //初始化Handler
+        private void initHandler() {
+            mHandler = new Handler() {
+                @Override
+                public void handleMessage(Message msg) {
+                    super.handleMessage(msg);
+                    FragmentTransaction transaction = mManager.beginTransaction();
+                    BaseFragment fragment = null;
+                    switch (msg.what) {
+                        case Constants.HOME_FRAGMENT:
+                            fragment = mFragments.get(Constants.HOME_FRAGMENT);
+                            if (fragment == null) {
+                                fragment = new HomeFragment();
+                                mFragments.put(Constants.HOME_FRAGMENT, fragment);
+                            }
+                            addFragment(transaction, fragment, msg.what);
+                            break;
+                        case Constants.SOFTWARE_FRAGMENT:
+                            fragment = mFragments.get(Constants.SOFTWARE_FRAGMENT);
+                            if (fragment == null) {
+                                fragment = new SoftwareFragment();
+                                mFragments.put(Constants.SOFTWARE_FRAGMENT, fragment);
+                            }
+                            addFragment(transaction, fragment, msg.what);
+                            break;
+                        case Constants.GAME_FRAGMENT:
+                            fragment = mFragments.get(Constants.GAME_FRAGMENT);
+                            if (fragment == null) {
+                                fragment = new GameFragment();
+                                mFragments.put(Constants.GAME_FRAGMENT, fragment);
+                            }
+                            addFragment(transaction, fragment, msg.what);
+                            break;
+                        case Constants.MANAGER_FRAGMENT:
+                            fragment = mFragments.get(Constants.MANAGER_FRAGMENT);
+                            if (fragment == null) {
+                                fragment = new ManagerFragment();
+                                mFragments.put(Constants.MANAGER_FRAGMENT, fragment);
+                            }
+                            addFragment(transaction, fragment, msg.what);
+                            break;
+                        case Constants.DETAIL_FRAGMENT:
+                            fragment = mFragments.get(Constants.DETAIL_FRAGMENT);
+                            if (fragment == null) {
+                                fragment = new DetailFragment();
+                                mFragments.put(Constants.DETAIL_FRAGMENT, fragment);
+                            }
+                            addFragment(transaction, fragment, msg.what);
+                            if (getData(msg) != null) {
+                                ((DetailFragment) fragment).setDatas((String) getData(msg));
+                            }
+                            break;
+                        case Constants.MORE_FRAGMENT:
+                            fragment = mFragments.get(Constants.MORE_FRAGMENT);
+                            if (fragment == null) {
+                                fragment = new MoreFragment();
+                                mFragments.put(Constants.MORE_FRAGMENT, fragment);
+                            }
+                            addFragment(transaction, fragment, msg.what);
+    
+                            if (getData(msg) != null) {
+                                ((MoreFragment) fragment).setData((AppLayoutInfo) getData(msg));
+                            }
+                            break;
+                        case Constants.COMMENT_FRAGMENT:
+                            fragment = mFragments.get(Constants.COMMENT_FRAGMENT);
+                            if (fragment == null) {
+                                fragment = new CommentFragment();
+                                mFragments.put(Constants.COMMENT_FRAGMENT, fragment);
+                            }
+                            addFragment(transaction, fragment, msg.what);
+    
+                            ((CommentFragment) fragment).setDatas(Constants.getComment());
+                            ((CommentFragment) fragment).setAll(true);
+                            break;
+                        case Constants.SEARCH_FRAGMENT:
+                            fragment = mFragments.get(Constants.SEARCH_FRAGMENT);
+                            if (fragment == null) {
+                                fragment = new SearchFragment();
+                                mFragments.put(Constants.SEARCH_FRAGMENT, fragment);
+                            }
+                            addFragment(transaction, fragment, msg.what);
+                            if (getData(msg) != null) {
+                                ((SearchFragment) fragment).setDatas((String) getData(msg));
+                            }
+                            break;
+                        case Constants.TOAST:
+                            Tools.toast(MainActivity.this, (String) msg.obj);
+                            break;
+                        case Constants.REFRESH:
+                            Fragment currentFragment = getCurrentFragment();
+                            if (currentFragment != null) {
+                                BaseFragment baseFragment = (BaseFragment) currentFragment;
+                                baseFragment.refresh();
+                            }
+                            break;
+                        case Constants.UPDATE:
+                            saveAllData();
+                            break;
+                    }
+                    if (msg.what != Constants.TOAST && msg.what != Constants.REFRESH
+                            && msg.what != Constants.UPDATE) {
+                        transaction.commit();
+                        mManager.executePendingTransactions();
+                        fragment.refresh();
+                    }
+                }
+            };
+        }
+    
+        //将要要显示的fragment加入事物管理器，并加上tag（what）
+        private void addFragment(FragmentTransaction transaction, Fragment fragment, int what) {
+            Fragment currentFragment = getCurrentFragment();
+            if (!fragment.isAdded()) {
+                transaction.add(R.id.main_fragment_container, fragment, what + "");
+            }
+            if (currentFragment != null) {
+                transaction.hide(currentFragment).show(fragment);
+            } else {
+                transaction.show(fragment);
+            }
+        }
+  
+        // 获得消息中携带的数据
+        private Object getData(Message msg) {
+            if (msg.obj != null) {
+                return msg.obj;
+            }
+            Bundle data = msg.getData();
+            if (data == null) {
+                return null;
+            }
+            switch (msg.what) {
+                case Constants.MORE_FRAGMENT:
+                    return (AppLayoutInfo) data.getSerializable(Constants.APP_LAYOUT_INFO);
+            }
+            return null;
+        }
+  
 - 下载数据的保存结构
+
+     这里是记录下载数据的保存结构，通过这里的数据每次启动AppStore时候有一个数据加载
+     
+        @Override
+        public void onCreate(SQLiteDatabase db) {
+            String downloadsql = "CREATE TABLE IF NOT EXISTS " + DOWNLOAD_INFO + " ("
+                    + "id INTEGER PRIMARY KEY  AUTOINCREMENT  NOT NULL , "
+                    + "userID VARCHAR, "
+                    + "taskID VARCHAR, "
+                    + "url VARCHAR, "
+                    + "filePath VARCHAR, "
+                    + "fileName VARCHAR, "
+                    + "fileSize VARCHAR, "
+                    + "downLoadSize VARCHAR, "
+                    + "isSuccess VARCHAR , "
+                    + "packageName VARCHAR, "
+                    + "iconUrl VARCHAR "
+                    + ")";
+            db.execSQL(downloadsql);
+         }
