--- a/design_document/搜索功能的实现.md
+++ b/design_document/搜索功能的实现.md
@@ -1,1 +1,127 @@
+### 搜索功能的实现
 
+  搜索功能主要是依据右上角的EditText输入框的文字变化来做的是否进入搜索界面、- 这里做的主要是一个本地搜索，
+  即把服务器上所有的应用数据保存在本地，然后在本地进行数据搜索，进而显示在界面上
+
+  - 缓存服务器数据，这里是吧网络上的数据下载下来保存在了SharePreference里，到时候搜索的时候可以读取本地是否保存有这些数据，然后加载出来
+
+        //保存服务器数据
+        private void saveAllData() {
+            initUrl();
+            new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    String allData = NetUtils.getNetStr(MainActivity.this, "/all");
+                    if (!TextUtils.isEmpty(allData)) {
+                        try {
+                            DataInfo dataInfo = new DataInfo(new JSONObject(allData));
+                            if (dataInfo != null && dataInfo.getAppList() != null) {
+                                List<AppLayoutGridviewInfo> appList = dataInfo.getAppList();
+                                for (int i = 0; i < appList.size(); i++) {
+                                    AppLayoutGridviewInfo appInfo = appList.get(i);
+                                    SPUtils.saveAllData(MainActivity.this, appInfo);
+                                }
+                            }
+                        } catch (JSONException e) {
+                            e.printStackTrace();
+                        }
+                    }
+                    mHandler.sendEmptyMessage(Constants.REFRESH);
+                }
+            }).start();
+        }
+         
+        //将数据保存到SP中，第二个参数是这个类的实体类                   
+        public static void saveAllData(Context context, AppLayoutGridviewInfo appInfo) {
+            SharedPreferences.Editor edit =
+                    context.getSharedPreferences(Constants.SP_ALL_DATA, Context.MODE_PRIVATE).edit();
+            String json = "{\"id\":" + appInfo.getId() + "," +
+                    "\"packagename\":\"" + appInfo.getAppPackageName() + "\"," +
+                    "\"name\":\"" + appInfo.getName() + "\"," +
+                    "\"version\":\"" + appInfo.getVersionName() + "\"," +
+                    "\"icon\":\"" + appInfo.getIconUrl() + "\"," +
+                    "\"download\":\"" + appInfo.getDownloadUrl() + "\"," +
+                    "\"size\":" + appInfo.getFileSize() +
+                    "}";
+            edit.putString(appInfo.getName(), json);
+            edit.commit();
+        }
+
+  - 监听设置。对EditText做了一个TextWatcher监听
+
+        final EditText content = (EditText) findViewById(R.id.activity_title_content);
+        content.addTextChangedListener(new TextWatcher() {
+            @Override
+            public void beforeTextChanged(CharSequence s, int start, int count, int after) {
+
+            }
+
+            @Override
+            public void onTextChanged(CharSequence s, int start, int before, int count) {
+
+            }
+
+            @Override
+            public void afterTextChanged(Editable editable) {
+                if (!TextUtils.isEmpty(editable.toString())) {
+                    Message message = mHandler.obtainMessage();
+                    message.what = Constants.SEARCH_FRAGMENT;
+                    message.obj = editable.toString();
+                    mHandler.sendMessage(message);
+                }
+            }
+        });
+
+  - 然后获得需要搜索的内容之后通知MainActivity的Handler刷新界面，跳到搜索界面
+
+        case Constants.SEARCH_FRAGMENT:
+            fragment = mFragments.get(Constants.SEARCH_FRAGMENT);
+            if (fragment == null) {
+                fragment = new SearchFragment();
+                mFragments.put(Constants.SEARCH_FRAGMENT, fragment);
+            }
+            addFragment(transaction, fragment, msg.what);
+            if (getData(msg) != null) {
+                ((SearchFragment) fragment).setDatas((String) getData(msg));
+            }
+            break;
+
+  - 在搜索界面首先是获得了传过来的界面数据，它的布局很简单，就是一个GridView，主要实现是以下代码
+               
+        //初始化数据
+        public void initData() {
+            List<String> searchData = SPUtils.getSearchData(getActivity(), mContent);
+            List<AppLayoutGridviewInfo> datas = new ArrayList<>();
+            if (searchData != null) {
+                for (int i = 0; i < searchData.size(); i++) {
+                    String data = SPUtils.getData(getActivity(),
+                            Constants.SP_ALL_DATA, searchData.get(i));
+                    try {
+                        AppLayoutGridviewInfo gridviewInfo =
+                                new AppLayoutGridviewInfo(new JSONObject(data));
+                        datas.add(gridviewInfo);
+                    } catch (JSONException e) {
+                        e.printStackTrace();
+                    }
+                }
+            }
+            AppLayoutInfo appLayoutInfo = new AppLayoutInfo(datas);
+            appLayoutInfo.setType(getActivity().getString(R.string.search));
+            mListAdapter.addItem(appLayoutInfo);
+        }
+                         
+         //获取包含搜索内容的所有数据，第二个参数是要搜索的内容
+        public static List<String> getSearchData(Context context, String content) {
+            List<String> list = new ArrayList<>();
+            SharedPreferences sp =
+                    context.getSharedPreferences(Constants.SP_ALL_DATA, Context.MODE_PRIVATE);
+            Map<String, ?> all = sp.getAll();
+            Set<? extends Map.Entry<String, ?>> entries = all.entrySet();
+            for (Map.Entry<String, ?> entry : entries) {
+                if (entry.getKey() != null && content != null &&
+                        entry.getKey().toLowerCase().contains(content.toLowerCase().trim())) {
+                    list.add(entry.getKey());
+                }
+            }
+            return list;
+        }
