--- a/design_document/代码结构.md
+++ b/design_document/代码结构.md
@@ -1,2 +1,69 @@
+# java代码
 ![](https://github.com/openthos/appstore-ota-analysis/blob/master/pic/java.png)
+
+|类|功能|
+|---|---|
+|adapter|
+|AppLayoutAdapter.java||
+|AppLayoutGridViewAdapter.java||
+|AppTypeAdapter.java||
+|AppTypeListViewAdapter.java||
+|BasicAdapter.java||
+|CommentAdapter.java||
+|ManagerDownloadAdapter.java||
+|ManagerUpdateAdapter.java||
+|app|
+|Constants.java||
+|StoreApplication.java||
+|bean|
+|AppLayoutGridviewinfo.java||
+|AppLayoutInfo.java||
+|AppTypeInfo.java||
+|AppTypeListviewInfo.java||
+|CommentInfo.java||
+|DataInfo.java||
+|DetailContentInfo.java||
+|DetailInfo.java||
+|HomeDataAppLayoutInfo.java||
+|HomeDataInfo.java||
+|PicturesInfo.java||
+|SQLAppInstallInfo.java||
+|SQLDownLoadInfo.java||
+|TaskInfo.java||
+|fragment|
+|AppTypeFragment.java||
+|CommentFragment.java||
+|DetailFragment.java||
+|HomeAppLayoutFragment.java||
+|MoreFragment.java||
+|SearchFragment.java||
+|BaseClassifyFragment.java||
+|BaseFragment.java||
+|GameFragment.java||
+|HomeFragment.java||
+|ManagerFragment.java||
+|SoftwareFragment.java||
+|DownLoader.java||
+|DownLoadListener.java||
+|DownLoadManager.java||
+|DownLoadService.java||
+|utils|
+|DownLoadKeeper.java||
+|SQLiteHelper.java||
+|AppUtils.java||
+|DataCache.java||
+|DialogUtils.java||
+|FileHelper.java||
+|ImageCache.java||
+|NetUtils.java||
+|SPUtils.java||
+|Tools.java||
+|view|
+|CustomGridView.java||
+|CustomListView.java||
+|CustomProgressBar.java||
+|Kanner.java||
+|AppInstallReceiver.java||
+|MainActivity.java||
+
 ![](https://github.com/openthos/appstore-ota-analysis/blob/master/pic/res.png)
