--- a/design_document/代码结构.md
+++ b/design_document/代码结构.md
@@ -66,4 +66,31 @@
 |AppInstallReceiver.java||
 |MainActivity.java||
 
+# 布局文件
 ![](https://github.com/openthos/appstore-ota-analysis/blob/master/pic/res.png)
+|布局文件|功能|
+|---|---|
+|activity_main.xml||
+|activity_title.xml||
+|app_layout.xml||
+|app_layout_gridview.xml||
+|app_type.xml||
+|app_type_listview.xml||
+|dialog_function.xml||
+|fragment_base.xml||
+|fragment_comment.xml||
+|fragment_detail.xml||
+|fragment_game.xml||
+|fragment_home.xml||
+|fragment_home_app_layout.xml||
+|fragment_item_left.xml||
+|fragment_item_right,xml||
+|fragment_manager.xml||
+|fragment_more.xml||
+|fragment_search.xml||
+|fragment_software.xml||
+|home_view.xml||
+|item_comment.xml||
+|item_manage.xml||
+|item_manager_download.xml||
+|kanner_layout.xml||
