--- a/design_document/代码结构.md
+++ b/design_document/代码结构.md
@@ -3,95 +3,95 @@
 
 |类|功能|
 |---|---|
-|adapter|
-|AppLayoutAdapter.java||
-|AppLayoutGridViewAdapter.java||
-|AppTypeAdapter.java||
-|AppTypeListViewAdapter.java||
-|BasicAdapter.java||
-|CommentAdapter.java||
-|ManagerDownloadAdapter.java||
-|ManagerUpdateAdapter.java||
-|app|
-|Constants.java||
-|StoreApplication.java||
-|bean|
-|AppLayoutGridviewinfo.java||
-|AppLayoutInfo.java||
-|AppTypeInfo.java||
-|AppTypeListviewInfo.java||
-|CommentInfo.java||
-|DataInfo.java||
-|DetailContentInfo.java||
-|DetailInfo.java||
-|HomeDataAppLayoutInfo.java||
-|HomeDataInfo.java||
-|PicturesInfo.java||
-|SQLAppInstallInfo.java||
-|SQLDownLoadInfo.java||
-|TaskInfo.java||
-|fragment|
-|AppTypeFragment.java||
-|CommentFragment.java||
-|DetailFragment.java||
-|HomeAppLayoutFragment.java||
-|MoreFragment.java||
-|SearchFragment.java||
-|BaseClassifyFragment.java||
-|BaseFragment.java||
-|GameFragment.java||
-|HomeFragment.java||
-|ManagerFragment.java||
-|SoftwareFragment.java||
-|DownLoader.java||
-|DownLoadListener.java||
-|DownLoadManager.java||
-|DownLoadService.java||
+|AppInstallReceiver.java|广播接收器，用于检测应用的卸载，安装|
+|MainActivity.java|主方法|
+|adapter|适配器|
+|AppLayoutAdapter.java|首页，游戏，软件的每一个左侧布局的加载（listview）|
+|AppLayoutGridViewAdapter.java|首页，游戏，软件的每一个左侧布局的每一个item项加载（gridView）|
+|AppTypeAdapter.java|首页，游戏，软件的每一个右侧布局的加载（listview）|
+|AppTypeListViewAdapter.java|首页，游戏，软件的每一个右侧布局的item加载（listview|
+|BasicAdapter.java|adapter的一个基类|
+|CommentAdapter.java|评论页面的适配器|
+|ManagerDownloadAdapter.java|管理页面的下载内容适配器|
+|ManagerUpdateAdapter.java|管理页面升级的适配器|
+|app|常量及启动加载|
+|Constants.java|常量类|
+|StoreApplication.java|继承Application的一个类|
+|bean|实体类|
+|AppLayoutGridviewinfo.java|左侧实体类的gridview数据|
+|AppLayoutInfo.java|左侧实体类的大数据|
+|AppTypeInfo.java|右侧数据|
+|AppTypeListviewInfo.java|右侧数据的list项|
+|CommentInfo.java|评论|
+|DataInfo.java|首页的大数据|
+|DetailContentInfo.java|详情界面的item项|
+|DetailInfo.java|详情数据的大象|
+|HomeDataAppLayoutInfo.java|主页左侧数据|
+|HomeDataInfo.java|主页左侧数据|
+|PicturesInfo.java|图片|
+|SQLAppInstallInfo.java|软件安装|
+|SQLDownLoadInfo.java|软件下载|
+|TaskInfo.java|下载人物|
+|fragment||
+|AppTypeFragment.java|右侧条目的fragment加载|
+|CommentFragment.java|评论页面|
+|DetailFragment.java|详情页面|
+|HomeAppLayoutFragment.java|首页的左侧页面|
+|MoreFragment.java|更多界面|
+|SearchFragment.java|搜索界面|
+|BaseClassifyFragment.java|软件和游戏的父类界面|
+|BaseFragment.java|基类界面|
+|GameFragment.java游戏界面||
+|HomeFragment.java|首页的界面|
+|ManagerFragment.java|管理界面|
+|SoftwareFragment.java|软件界面|
+|DownLoader.java|下载的每个软件的下载任务类|
+|DownLoadListener.java|下载的监听|
+|DownLoadManager.java|下载任务管理类|
+|DownLoadService.java|下载的服务|
 |utils|
-|DownLoadKeeper.java||
-|SQLiteHelper.java||
-|AppUtils.java||
-|DataCache.java||
-|DialogUtils.java||
-|FileHelper.java||
-|ImageCache.java||
-|NetUtils.java||
-|SPUtils.java||
-|Tools.java||
+|DownLoadKeeper.java|下载数据操作工具类|
+|SQLiteHelper.java|数据哭创建|
+|AppUtils.java|应用操作工具类|
+|DataCache.java|文本数据缓存|
+|DialogUtils.java|弹出的自定义页面的dialog|
+|FileHelper.java|文件操作类|
+|ImageCache.java|图片缓存操作类|
+|NetUtils.java|网络请求类|
+|SPUtils.java|SP存储类|
+|Tools.java|常见工具类|
 |view|
-|CustomGridView.java||
-|CustomListView.java||
-|CustomProgressBar.java||
-|Kanner.java||
-|AppInstallReceiver.java||
-|MainActivity.java||
+|CustomGridView.java|自定义GridView类|
+|CustomListView.java|自定义ListView类|
+|CustomProgressBar.java|自定义进度条类|
+|Kanner.java|轮播图类|
 
 # 布局文件
 ![](https://github.com/openthos/appstore-ota-analysis/blob/master/pic/res.png)
 
 |布局文件|功能|
 |---|---|
-|activity_main.xml||
-|activity_title.xml||
-|app_layout.xml||
-|app_layout_gridview.xml||
-|app_type.xml||
-|app_type_listview.xml||
-|dialog_function.xml||
-|fragment_base.xml||
-|fragment_comment.xml||
-|fragment_detail.xml||
-|fragment_game.xml||
-|fragment_home.xml||
-|fragment_home_app_layout.xml||
-|fragment_item_left.xml||
-|fragment_item_right,xml||
-|fragment_manager.xml||
-|fragment_more.xml||
-|fragment_search.xml||
-|fragment_software.xml||
-|home_view.xml||
-|item_comment.xml||
-|item_manage.xml||
-|item_manager_download.xml||
-|kanner_layout.xml||
+|activity_main.xml|主布局|
+|activity_title.xml|主布局最上面的title|
+|app_layout.xml|每个页面左侧的大布局|
+|app_layout_gridview.xml|每个页面左侧大布局的item项|
+|app_type.xml|每个页面右侧的大布局|
+|app_type_listview.xml|每个页面右侧的大布局的item项|
+|dialog_function.xml|dialog的自定义布局|
+|fragment_base.xml|fragment基类|
+|fragment_comment.xml|评论|
+|fragment_detail.xml|详情|
+|fragment_game.xml|游戏|
+|fragment_home.xml|主页|
+|fragment_home_app_layout.xml|主页的左侧大布局|
+|fragment_item_left.xml|主页的左侧布局的item项|
+|fragment_item_right,xml|主页|
+|fragment_manager.xml|管理|
+|fragment_more.xml|更多|
+|fragment_search.xml|搜索|
+|fragment_software.xml|软件|
+|home_view.xml|主界面轮播图（3个imageview）|
+|item_comment.xml|评论|
+|item_manage.xml|管理的更新|
+|item_manager_download.xml|管理的下载|
+|kanner_layout.xml|轮播图的主布局|
