--- a/design_document/代码结构.md
+++ b/design_document/代码结构.md
@@ -5,7 +5,7 @@
 |---|---|
 |AppInstallReceiver.java|广播接收器，用于检测应用的卸载，安装|
 |MainActivity.java|主方法|
-|adapter|适配器|
+|adapter||
 |AppLayoutAdapter.java|首页，游戏，软件的每一个左侧布局的加载（listview）|
 |AppLayoutGridViewAdapter.java|首页，游戏，软件的每一个左侧布局的每一个item项加载（gridView）|
 |AppTypeAdapter.java|首页，游戏，软件的每一个右侧布局的加载（listview）|
@@ -17,7 +17,7 @@
 |app|常量及启动加载|
 |Constants.java|常量类|
 |StoreApplication.java|继承Application的一个类|
-|bean|实体类|
+|bean||
 |AppLayoutGridviewinfo.java|左侧实体类的gridview数据|
 |AppLayoutInfo.java|左侧实体类的大数据|
 |AppTypeInfo.java|右侧数据|
