--- a/design_document/多线程后台下载.md
+++ b/design_document/多线程后台下载.md
@@ -1,1 +1,434 @@
+# 多线程后台下载
 
+- 设计的主要类
+  - package com.openthos.appstore.utils.sql.SQLiteHelper
+  - package com.openthos.appstore.utils.sql.DownloadKeeper
+  - package com.openthos.appstore.utils.download.DownLoader
+  - package com.openthos.appstore.utils.download.DownLoadListener
+  - package com.openthos.appstore.utils.download.DownLoadManager
+  - package com.openthos.appstore.utils.download.DownLoadService
+  - package com.openthos.appstore.bean.SQLDownLoadInfo
+  - package com.openthos.appstore.bean.TaskInfo
+  
+- 主要实现
+  - 首先是两个记录数据的实体类SQLDownLoadInfo.java和TaskInfo.java,这个就不附代码了
+  - 在者是数据库表和数据库操作类，数据库表的内容如下：
+
+
+    ***
+        @Override
+        public void onCreate(SQLiteDatabase db) {
+            String downloadsql = "CREATE TABLE IF NOT EXISTS " + DOWNLOAD_INFO + " ("
+                    + "id INTEGER PRIMARY KEY  AUTOINCREMENT  NOT NULL , "
+                    + "userID VARCHAR, "
+                    + "taskID VARCHAR, "
+                    + "url VARCHAR, "
+                    + "filePath VARCHAR, "
+                    + "fileName VARCHAR, "
+                    + "fileSize VARCHAR, "
+                    + "downLoadSize VARCHAR, "
+                    + "isSuccess VARCHAR , "
+                    + "packageName VARCHAR, "
+                    + "iconUrl VARCHAR "
+                    + ")";
+            db.execSQL(downloadsql);
+    
+            String appinstall = "CREATE TABLE IF NOT EXISTS " + APP_INSTALL + " ("
+                    + "id INTEGER PRIMARY KEY  AUTOINCREMENT  NOT NULL , "
+                    + "name VARCHAR, "
+                    + "packageName VARCHAR, "
+                    + "versionName VARCHAR, "
+                    + "versionCode VARCHAR "
+                    + ")";
+            db.execSQL(appinstall);
+        }
+    ***
+    
+  - 下载监听
+    ***
+        public interface DownLoadListener {
+        
+            public void onStart(SQLDownLoadInfo sqlDownLoadInfo);
+        
+            public void onProgress(SQLDownLoadInfo sqlDownLoadInfo, boolean isSupportBreakpoint);
+        
+            public void onStop(SQLDownLoadInfo sqlDownLoadInfo, boolean isSupportBreakpoint);
+        
+            public void onError(SQLDownLoadInfo sqlDownLoadInfo, String error);
+        
+            public void onSuccess(SQLDownLoadInfo sqlDownLoadInfo);
+        }
+
+    ***
+    
+  - 后台下载
+  ***
+       public class AppStoreBinder extends Binder {
+            public void stopTask(String taskId) {
+                downLoadManager.stopTask(taskId);
+            }
+    
+            public void startTask(String taskId) {
+                downLoadManager.startTask(taskId);
+            }
+    
+            public void addTask(String task, String url, String fileName,
+                                String packageName, String iconUrl) {
+                downLoadManager.addTask(task, url, fileName, packageName, iconUrl);
+            }
+    
+            public void addTask(String task, String url, String fileName, String packageName) {
+                downLoadManager.addTask(task, url, fileName, packageName);
+            }
+    
+            public void startAllTask() {
+                downLoadManager.startAllTask();
+            }
+    
+            public void stopAllTask() {
+                downLoadManager.stopAllTask();
+            }
+        }
+  ***
+  
+  - 这里是下载的主要实现方法
+  ***
+      class DownLoadThread extends Thread {
+            private boolean isdownloading;
+            private URL url;
+            private HttpURLConnection urlConn;
+            private InputStream inputStream;
+            private int progress = -1;
+            BufferedOutputStream bos = null;
+            BufferedInputStream bis = null;
+    
+            public DownLoadThread() {
+                isdownloading = true;
+            }
+    
+            @Override
+            public void run() {
+                while (mDownloadtimes < mMaxdownloadtimes) {
+    
+                    try {
+                        if (mDownFileSize == mFileSize
+                                && mFileSize > 0) {
+                            mOndownload = false;
+                            Message msg = new Message();
+                            msg.what = TASK_PROGESS;
+                            msg.arg1 = 100;
+                            handler.sendMessage(msg);
+                            mDownloadtimes = mMaxdownloadtimes;
+                            mDownLoadThread = null;
+                            return;
+                        }
+                        url = new URL(mSQLDownLoadInfo.getUrl());
+                        urlConn = (HttpURLConnection) url.openConnection();
+                        urlConn.setConnectTimeout(HTTP_CONNECT_TIME_OUT);
+                        urlConn.setReadTimeout(HTTP_READ_TIME_OUT);
+                        if (mFileSize < 1) {
+                            openConnention();
+                        } else {
+                            if (new File(TEMP_FILEPATH + "/" +
+                                    mSQLDownLoadInfo.getFileName()).exists()) {
+                                mDownFileSize = new File(
+                                        FileHelper.getTempFile(mSQLDownLoadInfo.getFileName())).length();
+                                urlConn.setRequestProperty("Range", "bytes=" + mDownFileSize + "-");
+                                urlConn.setUseCaches(false);
+                            } else {
+                                mFileSize = 0;
+                                mDownFileSize = 0;
+                                saveDownloadInfo();
+                                openConnention();
+                            }
+                        }
+                        inputStream = urlConn.getInputStream();
+                        bis = new BufferedInputStream(inputStream);
+    
+                        bos = new BufferedOutputStream(new FileOutputStream(
+                                FileHelper.getTempFile(mSQLDownLoadInfo.getFileName()), true));
+                        byte[] buffer = new byte[BUFFER_READ_BYTE];
+                        int length = -1;
+                        long timeMillis = System.currentTimeMillis();
+                        long downloadSize = mDownFileSize;
+                        mFileSize = urlConn.getContentLength() + downloadSize;
+                        mSQLDownLoadInfo.setFileSize(mFileSize);
+                        saveDownloadInfo();
+    
+                        while ((length = bis.read(buffer)) != -1 && isdownloading) {
+                            bos.write(buffer, 0, length);
+                            bos.flush();
+                            mDownFileSize += length;
+                            long currentTimeMillis = System.currentTimeMillis();
+                            int nowProgress = (int) ((100 * mDownFileSize) / mFileSize);
+                            if (nowProgress > progress && currentTimeMillis - timeMillis > 1000) {
+                                progress = nowProgress;
+                                long speech = (mDownFileSize - downloadSize) /
+                                        (currentTimeMillis - timeMillis);
+                                downloadSize = mDownFileSize;
+                                mSQLDownLoadInfo.setSpeech(speech);
+                                timeMillis = currentTimeMillis;
+                                saveDownloadInfo();
+                                sendMessage(TASK_PROGESS, null);
+                            }
+                        }
+                        if (mDownFileSize == mFileSize) {
+                            boolean renameResult = RenameFile();
+                            if (renameResult) {
+                                mSQLDownLoadInfo.setDownloadSize(mFileSize);
+                                saveDownloadInfo();
+                                handler.sendEmptyMessage(TASK_SUCCESS);
+                            } else {
+                                new File(TEMP_FILEPATH + "/" + mSQLDownLoadInfo.getFileName()).delete();
+                                handler.sendEmptyMessage(TASK_ERROR);
+                            }
+    
+                            mDownLoadThread = null;
+                            mOndownload = false;
+                        }
+                        mDownloadtimes = mMaxdownloadtimes;
+                    } catch (Exception e) {
+                        if (isdownloading) {
+                            if (mIsSupportBreakpoint) {
+                                mDownloadtimes++;
+                                if (mDownloadtimes >= mMaxdownloadtimes) {
+                                    if (mFileSize > 0) {
+                                        saveDownloadInfo();
+                                    }
+                                    mPool.remove(mDownLoadThread);
+                                    mDownLoadThread = null;
+                                    mOndownload = false;
+                                    sendMessage(TASK_ERROR, e.toString());
+                                }
+                            } else {
+                                mDownFileSize = 0;
+                                mDownloadtimes = mMaxdownloadtimes;
+                                mOndownload = false;
+                                mDownLoadThread = null;
+                                sendMessage(TASK_ERROR, e.toString());
+                            }
+    
+                        } else {
+                            mDownloadtimes = mMaxdownloadtimes;
+                        }
+                        e.printStackTrace();
+                    } finally {
+                        try {
+                            if (urlConn != null) {
+                                urlConn.disconnect();
+                            }
+                        } catch (Exception e) {
+                            e.printStackTrace();
+                        }
+                        try {
+                            if (inputStream != null) {
+                                inputStream.close();
+                            }
+                        } catch (Exception e) {
+                            e.printStackTrace();
+                        }
+                        Tools.closeStream(bis, bos);
+                    }
+                }
+            }
+    
+            public void stopDownLoad() {
+                isdownloading = false;
+                mDownloadtimes = mMaxdownloadtimes;
+                if (mFileSize > 0) {
+                    saveDownloadInfo();
+                }
+                handler.sendEmptyMessage(TASK_STOP);
+            }
+    
+            private void openConnention() throws Exception {
+                long urlfilesize = urlConn.getContentLength();
+                if (urlfilesize > 0) {
+                    isFolderExist();
+                    mSQLDownLoadInfo.setFileSize(urlfilesize);
+                    mFileSize = urlfilesize;
+                    if (isdownloading) {
+                        saveDownloadInfo();
+                    }
+                }
+            }
+        }
+  ***
+  
+  - 下载任务的开始，停止，设置监听
+  ***
+       public void start() {
+            if (mDownLoadThread == null) {
+                mDownloadtimes = 0;
+                mOndownload = true;
+                handler.sendEmptyMessage(TASK_START);
+                mDownLoadThread = new DownLoadThread();
+                mPool.execute(mDownLoadThread);
+            }
+        }
+    
+        public void stop() {
+            if (mDownLoadThread != null) {
+                mOndownload = false;
+                mDownLoadThread.stopDownLoad();
+                mPool.remove(mDownLoadThread);
+                mDownLoadThread = null;
+            }
+        }
+        
+        public static void setDownLoadListener(String key, DownLoadListener listener) {
+            if (listener == null) {
+                removeDownLoadListener(key);
+            } else {
+                mListenerMap.put(key, listener);
+            }
+        }
+  ***
+  
+  - 多任务下载的管理
+  ***
+      //获取数据库存储的下载任务
+      private void recoverData(Context context, String userID) {
+            stopAllTask();
+            mTaskList = new ArrayList<DownLoader>();
+            DownloadKeeper datakeeper = new DownloadKeeper(context);
+            ArrayList<SQLDownLoadInfo> sqlDownloadInfoList = null;
+            if (userID == null) {
+                sqlDownloadInfoList = datakeeper.getAllDownLoadInfo();
+            } else {
+                sqlDownloadInfoList = datakeeper.getUserDownLoadInfo(userID);
+            }
+            if (sqlDownloadInfoList.size() > 0) {
+                int listSize = sqlDownloadInfoList.size();
+                for (int i = 0; i < listSize; i++) {
+                    SQLDownLoadInfo sqlDownLoadInfo = sqlDownloadInfoList.get(i);
+                    DownLoader sqlDownLoader = new DownLoader(
+                            context, sqlDownLoadInfo, mPool, userID, mIsSupportBreakpoint, false);
+                    sqlDownLoader.setDownLodSuccesslistener(mDownloadsuccessListener);
+                    sqlDownLoader.setDownLoadListener("public", mAlltasklistener);
+                    mTaskList.add(sqlDownLoader);
+                }
+            }
+        }
+        
+        //添加下载任务
+        public int addTask(String taskID, String url, String fileName,
+                           String packageName, String iconUrl) {
+            return addTask(taskID, url, fileName, packageName, null, iconUrl);
+        }
+    
+        public int addTask(String taskID, String url, String fileName, String packageName) {
+            return addTask(taskID, url, fileName, packageName, null);
+        }
+    
+        public int addTask(String taskID, String url,
+                           String fileName, String packageName, String filepath, String iconUrl) {
+            if (taskID == null) {
+                taskID = fileName;
+            }
+            int state = getAttachmentState(taskID, fileName, filepath);
+            if (state != ADD_TASK) {
+                FileHelper.deleteFile(fileName);
+            }
+    
+            SQLDownLoadInfo downloadinfo = new SQLDownLoadInfo();
+            downloadinfo.setUserID(mUserID);
+            downloadinfo.setDownloadSize(0);
+            downloadinfo.setFileSize(0);
+            downloadinfo.setTaskID(taskID);
+            downloadinfo.setFileName(fileName);
+            downloadinfo.setUrl(url);
+            downloadinfo.setPackageName(packageName);
+            downloadinfo.setIconUrl(iconUrl);
+            if (filepath == null) {
+                downloadinfo.setFilePath(FileHelper.getDefaultFile(fileName));
+            } else {
+                downloadinfo.setFilePath(filepath);
+            }
+            DownLoader taskDownLoader = new DownLoader(
+                    mContext, downloadinfo, mPool, mUserID, mIsSupportBreakpoint, true);
+            taskDownLoader.setDownLodSuccesslistener(mDownloadsuccessListener);
+            if (mIsSupportBreakpoint) {
+                taskDownLoader.setSupportBreakpoint(true);
+            } else {
+                taskDownLoader.setSupportBreakpoint(false);
+            }
+            taskDownLoader.start();
+            mTaskList.add(0, taskDownLoader);
+            return 1;
+        }
+        
+        //删除下载任务
+        public void deleteTask(String taskID) {
+            for (int i = 0; i < mTaskList.size(); i++) {
+                DownLoader deletedownloader = mTaskList.get(i);
+                if (deletedownloader.getTaskID().equals(taskID)) {
+                    deletedownloader.destroy();
+                    mTaskList.remove(deletedownloader);
+                    break;
+                }
+            }
+        }
+        
+        //开始任务
+        public void startTask(String taskID) {
+            for (int i = 0; i < mTaskList.size(); i++) {
+                DownLoader deletedownloader = mTaskList.get(i);
+                if (deletedownloader.getTaskID().equals(taskID)) {
+                    deletedownloader.start();
+                    break;
+                }
+            }
+        }
+    
+        //停止任务
+        public void stopTask(String taskID) {
+            for (int i = 0; i < mTaskList.size(); i++) {
+                DownLoader deletedownloader = mTaskList.get(i);
+                if (deletedownloader.getTaskID().equals(taskID)) {
+                    deletedownloader.stop();
+                    break;
+                }
+            }
+        }
+    
+        //开始所有任务
+        public void startAllTask() {
+            for (int i = 0; i < mTaskList.size(); i++) {
+                DownLoader deletedownloader = mTaskList.get(i);
+                SQLDownLoadInfo sqlDownLoadInfo = deletedownloader.getSQLDownLoadInfo();
+                if (sqlDownLoadInfo != null && sqlDownLoadInfo.getFileSize() != 0 &&
+                        sqlDownLoadInfo.getFileSize() != sqlDownLoadInfo.getDownloadSize()) {
+                    deletedownloader.start();
+                }
+            }
+        }
+    
+        //停止所有任务
+        public void stopAllTask() {
+            for (int i = 0; i < mTaskList.size(); i++) {
+                DownLoader deletedownloader = mTaskList.get(i);
+                deletedownloader.stop();
+            }
+        }
+    
+        //给所有任务设置监听
+        public void setAllTaskListener(DownLoadListener listener) {
+            mAlltasklistener = listener;
+            DownLoader.setDownLoadListener("" + (++mCount), listener);
+        }
+  ***
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
