--- a/design_document/首页轮播图加载.md
+++ b/design_document/首页轮播图加载.md
@@ -1,1 +1,99 @@
+# 首页轮播图加载
 
+- 涉及的主要类
+  - package com.openthos.appstore.view.CarouselFigure
+- 主要实现
+***
+    //package com.openthos.appstore.view.CarouselFigure
+        // 获取需要轮播的数据图片网址，type是加载布局要指定的类型
+        public void setImageUrls(List<CarouseFigureInfo.CarouseFigurUrl> imgUrls, int type) {
+            if (imgUrls != null) {
+                mImageUrls = imgUrls;
+                mType = type;
+                initImageDots();
+                initData();
+            }
+    
+        }
+        
+        // 加载相同图片数量的点
+        private void initImageDots() {
+            int mCount = mImageUrls.size();
+            for (int i = 0; i < mCount; i++) {
+                ImageView iv_dot = new ImageView(mContext);
+                LinearLayout.LayoutParams params = new LinearLayout.LayoutParams(
+                        LinearLayout.LayoutParams.WRAP_CONTENT,
+                        LinearLayout.LayoutParams.WRAP_CONTENT);
+                params.leftMargin = 5;
+                params.rightMargin = 5;
+                iv_dot.setImageResource(R.drawable.dot_blur);
+                mDotLayout.addView(iv_dot);
+                mImageDots.add(iv_dot);
+            }
+            mImageDots.get(0).setImageResource(R.drawable.dot_focus);
+        }
+        
+        //  自动刷新
+        private final Runnable task = new Runnable() {
+            @Override
+            public void run() {
+                if (mIsAutoPlay) {
+                    mCurrentItem = (mCurrentItem + 1) % mCount + mCount;
+                    mPager.setCurrentItem(mCurrentItem);
+                    mHandler.postDelayed(task, Constants.DELAY_TIME_3);
+                } else {
+                    mHandler.postDelayed(task, Constants.DELAY_TIME_5);
+                }
+            }
+        };
+        
+        //轮播图片加载适配器
+        class CarouselPagerAdapter extends PagerAdapter {
+            @Override
+            public int getCount() {
+                return mCount * 3;
+            }
+    
+            @Override
+            public boolean isViewFromObject(View view, Object object) {
+                return view == object;
+            }
+    
+            @Override
+            public Object instantiateItem(ViewGroup container, int position) {
+                View ret = null;
+                switch (mType) {
+                    case Constants.CAROUSEL_FIGURE_HOME:
+                        ret = LayoutInflater.from(mContext).
+                                inflate(R.layout.carousel_home, container, false);
+                        break;
+                    case Constants.CAROUSEL_FIGURE_DETAIL:
+                        ret = LayoutInflater.from(mContext).
+                                inflate(R.layout.carousel_detail, container, false);
+                        break;
+                    default:
+                        break;
+                }
+    
+                ViewHolder holder = new ViewHolder(ret);
+                if (mCount >= 3) {
+                    ImageCache.loadImage(holder.carouselImg1,
+                            mImageUrls.get(position % mCount).getImgUrl());
+                    ImageCache.loadImage(holder.carouselImg2,
+                            mImageUrls.get((position + 1) % mCount).getImgUrl());
+                    ImageCache.loadImage(holder.carouselImg3,
+                            mImageUrls.get((position + 2) % mCount).getImgUrl());
+                }
+                container.addView(ret);
+                return ret;
+            }
+    
+            @Override
+            public void destroyItem(ViewGroup container, int position, Object object) {
+                container.removeView((View) object);
+            }
+        }
+        
+        
+***
+  
