--- a/design_document/页面回退.md
+++ b/design_document/页面回退.md
@@ -1,4 +1,41 @@
 
 # 页面回退
-
-  - 这里的页面回退采用的不是fragment的栈管理，而是通过记录标记fragment的tag值来返回到哪一个页面
+  -涉及的主要类
+    - package com.openthos.appstore.MainActivity
+  - 主要实现
+  ***
+      //package com.openthos.appstore.MainActivity`
+      //这里的页面回退采用的不是fragment的栈管理，而是通过记录标记fragment的tag值来返回到哪一个页面
+      //在每次切换页面的时候给mpage添加新的值
+      private void addFragment(FragmentTransaction transaction, Fragment fragment, int what) {
+            if (mPage.size() > 1) {
+                if (mPage.get(mPage.size() - 1) != what) {
+                    mPage.add(what);
+                }
+            } else {
+                mPage.add(what);
+            }
+            Fragment currentFragment = getCurrentFragment();
+            if (!fragment.isAdded()) {
+                transaction.add(R.id.main_fragment_container, fragment, what + "");
+            }
+            if (currentFragment != null) {
+                transaction.hide(currentFragment).show(fragment);
+            } else {
+                transaction.show(fragment);
+            }
+        }
+        
+        //当点击回退按钮的时候调以下方法，从mpage里取出上一个页面的值，然后加载
+        private void checked() {
+            if (mPage.size() > 1) {
+                mPage.remove(mPage.size() - 1);
+                Integer what = mPage.get(mPage.size() - 1);
+                if (what == Constants.SEARCH_FRAGMENT) {
+                    checked();
+                } else {
+                    mHandler.sendEmptyMessage(what);
+                }
+            }
+        }
+  ***
