--- a/design_document/应用操作.md
+++ b/design_document/应用操作.md
@@ -2,18 +2,16 @@
 
 - 主要涉及的类
   - package com.openthos.appstore.utils.AppUtils
-  - 
 - 实现方法
   ***
-           //卸载应用
-           // 这里是调用的设置里的方法，直接打开软件卸载的页面
-           String pkgName = (sqlAppInstallInfo).getPackageName();
-                Uri uri = Uri.parse("package:" + pkgName);
-                Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS, uri);
-                intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-                mContext.startActivity(intent);
+        //卸载应用，这里是调用的设置界面
+        String pkgName = (sqlAppInstallInfo).getPackageName();
+        Uri uri = Uri.parse("package:" + pkgName);
+        Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS, uri);
+        intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+        mContext.startActivity(intent);    
                 
-          //安装应用
+        //安装应用
         public static String installApk(Context mContext, String saveFileName) {
             File apkfile = new File(saveFileName);
             if (!apkfile.exists() || apkfile.length() == 0) {
