--- a/design_document/多线程后台下载.md
+++ b/design_document/多线程后台下载.md
@@ -64,199 +64,49 @@
   - 后台下载
   ***
        public class AppStoreBinder extends Binder {
+            //停止下载
             public void stopTask(String taskId) {
                 downLoadManager.stopTask(taskId);
             }
     
+            //开始下载
             public void startTask(String taskId) {
                 downLoadManager.startTask(taskId);
             }
     
+            //添加任务
             public void addTask(String task, String url, String fileName,
                                 String packageName, String iconUrl) {
                 downLoadManager.addTask(task, url, fileName, packageName, iconUrl);
             }
     
+            //添加任务
             public void addTask(String task, String url, String fileName, String packageName) {
                 downLoadManager.addTask(task, url, fileName, packageName);
             }
     
+            //开始所有任务
             public void startAllTask() {
                 downLoadManager.startAllTask();
             }
     
+            //停止所有任务
             public void stopAllTask() {
                 downLoadManager.stopAllTask();
             }
         }
   ***
   
-  - 这里是下载的主要实现方法
+  - 这里是下载的主要实现方法，主要实在DownLoadThread这个类里实现
   ***
       class DownLoadThread extends Thread {
-            private boolean isdownloading;
-            private URL url;
-            private HttpURLConnection urlConn;
-            private InputStream inputStream;
-            private int progress = -1;
-            BufferedOutputStream bos = null;
-            BufferedInputStream bis = null;
-    
-            public DownLoadThread() {
-                isdownloading = true;
-            }
-    
-            @Override
-            public void run() {
-                while (mDownloadtimes < mMaxdownloadtimes) {
-    
-                    try {
-                        if (mDownFileSize == mFileSize
-                                && mFileSize > 0) {
-                            mOndownload = false;
-                            Message msg = new Message();
-                            msg.what = TASK_PROGESS;
-                            msg.arg1 = 100;
-                            handler.sendMessage(msg);
-                            mDownloadtimes = mMaxdownloadtimes;
-                            mDownLoadThread = null;
-                            return;
-                        }
-                        url = new URL(mSQLDownLoadInfo.getUrl());
-                        urlConn = (HttpURLConnection) url.openConnection();
-                        urlConn.setConnectTimeout(HTTP_CONNECT_TIME_OUT);
-                        urlConn.setReadTimeout(HTTP_READ_TIME_OUT);
-                        if (mFileSize < 1) {
-                            openConnention();
-                        } else {
-                            if (new File(TEMP_FILEPATH + "/" +
-                                    mSQLDownLoadInfo.getFileName()).exists()) {
-                                mDownFileSize = new File(
-                                        FileHelper.getTempFile(mSQLDownLoadInfo.getFileName())).length();
-                                urlConn.setRequestProperty("Range", "bytes=" + mDownFileSize + "-");
-                                urlConn.setUseCaches(false);
-                            } else {
-                                mFileSize = 0;
-                                mDownFileSize = 0;
-                                saveDownloadInfo();
-                                openConnention();
-                            }
-                        }
-                        inputStream = urlConn.getInputStream();
-                        bis = new BufferedInputStream(inputStream);
-    
-                        bos = new BufferedOutputStream(new FileOutputStream(
-                                FileHelper.getTempFile(mSQLDownLoadInfo.getFileName()), true));
-                        byte[] buffer = new byte[BUFFER_READ_BYTE];
-                        int length = -1;
-                        long timeMillis = System.currentTimeMillis();
-                        long downloadSize = mDownFileSize;
-                        mFileSize = urlConn.getContentLength() + downloadSize;
-                        mSQLDownLoadInfo.setFileSize(mFileSize);
-                        saveDownloadInfo();
-    
-                        while ((length = bis.read(buffer)) != -1 && isdownloading) {
-                            bos.write(buffer, 0, length);
-                            bos.flush();
-                            mDownFileSize += length;
-                            long currentTimeMillis = System.currentTimeMillis();
-                            int nowProgress = (int) ((100 * mDownFileSize) / mFileSize);
-                            if (nowProgress > progress && currentTimeMillis - timeMillis > 1000) {
-                                progress = nowProgress;
-                                long speech = (mDownFileSize - downloadSize) /
-                                        (currentTimeMillis - timeMillis);
-                                downloadSize = mDownFileSize;
-                                mSQLDownLoadInfo.setSpeech(speech);
-                                timeMillis = currentTimeMillis;
-                                saveDownloadInfo();
-                                sendMessage(TASK_PROGESS, null);
-                            }
-                        }
-                        if (mDownFileSize == mFileSize) {
-                            boolean renameResult = RenameFile();
-                            if (renameResult) {
-                                mSQLDownLoadInfo.setDownloadSize(mFileSize);
-                                saveDownloadInfo();
-                                handler.sendEmptyMessage(TASK_SUCCESS);
-                            } else {
-                                new File(TEMP_FILEPATH + "/" + mSQLDownLoadInfo.getFileName()).delete();
-                                handler.sendEmptyMessage(TASK_ERROR);
-                            }
-    
-                            mDownLoadThread = null;
-                            mOndownload = false;
-                        }
-                        mDownloadtimes = mMaxdownloadtimes;
-                    } catch (Exception e) {
-                        if (isdownloading) {
-                            if (mIsSupportBreakpoint) {
-                                mDownloadtimes++;
-                                if (mDownloadtimes >= mMaxdownloadtimes) {
-                                    if (mFileSize > 0) {
-                                        saveDownloadInfo();
-                                    }
-                                    mPool.remove(mDownLoadThread);
-                                    mDownLoadThread = null;
-                                    mOndownload = false;
-                                    sendMessage(TASK_ERROR, e.toString());
-                                }
-                            } else {
-                                mDownFileSize = 0;
-                                mDownloadtimes = mMaxdownloadtimes;
-                                mOndownload = false;
-                                mDownLoadThread = null;
-                                sendMessage(TASK_ERROR, e.toString());
-                            }
-    
-                        } else {
-                            mDownloadtimes = mMaxdownloadtimes;
-                        }
-                        e.printStackTrace();
-                    } finally {
-                        try {
-                            if (urlConn != null) {
-                                urlConn.disconnect();
-                            }
-                        } catch (Exception e) {
-                            e.printStackTrace();
-                        }
-                        try {
-                            if (inputStream != null) {
-                                inputStream.close();
-                            }
-                        } catch (Exception e) {
-                            e.printStackTrace();
-                        }
-                        Tools.closeStream(bis, bos);
-                    }
-                }
-            }
-    
-            public void stopDownLoad() {
-                isdownloading = false;
-                mDownloadtimes = mMaxdownloadtimes;
-                if (mFileSize > 0) {
-                    saveDownloadInfo();
-                }
-                handler.sendEmptyMessage(TASK_STOP);
-            }
-    
-            private void openConnention() throws Exception {
-                long urlfilesize = urlConn.getContentLength();
-                if (urlfilesize > 0) {
-                    isFolderExist();
-                    mSQLDownLoadInfo.setFileSize(urlfilesize);
-                    mFileSize = urlfilesize;
-                    if (isdownloading) {
-                        saveDownloadInfo();
-                    }
-                }
-            }
-        }
+           ×××
+      }
   ***
   
   - 下载任务的开始，停止，设置监听
   ***
+       //开始任务
        public void start() {
             if (mDownLoadThread == null) {
                 mDownloadtimes = 0;
@@ -267,6 +117,7 @@
             }
         }
     
+        //停止任务
         public void stop() {
             if (mDownLoadThread != null) {
                 mOndownload = false;
@@ -276,6 +127,7 @@
             }
         }
         
+        //设置下载监听
         public static void setDownLoadListener(String key, DownLoadListener listener) {
             if (listener == null) {
                 removeDownLoadListener(key);
@@ -316,11 +168,13 @@
                            String packageName, String iconUrl) {
             return addTask(taskID, url, fileName, packageName, null, iconUrl);
         }
-    
+            
+        //添加下载任务
         public int addTask(String taskID, String url, String fileName, String packageName) {
             return addTask(taskID, url, fileName, packageName, null);
         }
-    
+       
+        //添加下载任务
         public int addTask(String taskID, String url,
                            String fileName, String packageName, String filepath, String iconUrl) {
             if (taskID == null) {
